--- a/ExampleAPI/ClientApp/src/app/components/login/login.component.scss
+++ b/ExampleAPI/ClientApp/src/app/components/login/login.component.scss
@@ -1,6 +1,10 @@
 .card{
     max-width: 70vh;
+    padding: 50px 30px;
 }
 .container{
     margin-top: 30vh;
+}
+.label-text{
+    text-align: left !important;
 }
